# KDBImporter

./: .gitignore  DASHBOARD_IMPLEMENTATION_GUIDE.md  INTEGRATION_SUCCESS_REPORT.md  KEYWORD_MANAGEMENT_SUCCESS.md  README-Docker-Setup.md  UI_INTEGRATION_SUCCESS.md  check_document_types.py  database_schema.sql  debug_paperless.py  docker-compose.yml  env.template  integration_bridge.py  start-dev.bat  start-dev.sh  test_keyword_management.py  test_paperless_connection.py  test_ui_integration.py  verify_documents.py
KDB-importer/: .gitignore  LICENSE  README.md
KDB-importer/backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
KDB-importer/backend/arxiv_importer/api/: main.py  routes.py
KDB-importer/backend/arxiv_importer/api/schemas/: import_models.py
KDB-importer/backend/arxiv_importer/core/: __init__.py  arxiv_client.py  import_manager.py  keyword_manager.py  metadata_handler.py  metrics_tracker.py  paperless_integration.py  query_parser.py  search_manager.py
KDB-importer/backend/notebooks/: notebook.ipynb
KDB-importer/frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
oQo-scripts/: .env.example  .gitignore  Dockerfile  Qdrant RAG Script.py  README.md  requirements.txt  run_post_consume.sh  tags.txt  types.txt
oQo-scripts/helper_scripts/: categories.txt  create_meta_custom.py  export_all.py  getAll_paperless.py  importer.ps1  importfolder2ppl.py
oQo-scripts/include/: categories.txt  tags.txt
oQo-scripts/src/: automate.py  main_arxiv.py  main_scrap_testing.py  webhook_paperless.py
terraform/: main.tf
(+40 files in other folders)
